--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -63,8 +63,8 @@
 
         <div class="card">
           <img src="img/logo.jpg" alt="Gomitas blandas Ojos" onclick="abrirModal(this)">
-          <h3>PROMOCION SEMANAL</h3>
-          <p>Con la compra de 20 productos o más, se llevan DE REGALO 2 frascos de gomitas blandas de 20-30 unidades cada uno</p>
+          <h3>PROMOCIÓN SEMANAL</h3>
+          <p>Con la compra de 20 productos o más, se llevan DE REGALO 2 frascos de gomitas blandas de 30 unidades cada uno</p>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
