--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<!-- Header -->
+<!-- Headerr -->
 <header>
   <aside class="logo-contenedor">
     <img src="img/logo.jpg" alt="Logo Golosinas Aries">
