--- a/catalogo.html
+++ b/catalogo.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   
-  <!-- Redirige automáticamente en 3 segundos a la página de catálogo mayorista -->
+  <!-- Redirige automáticamente en 3 segundos a la página de catálogo mayorista. -->
   <meta http-equiv="refresh" content="3; url=MAYORISTA_CATALOGO.html">
   <style>
     /* ==============================
