--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catálogo MAYORISTA</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/estiloos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -64,8 +64,7 @@
         <div class="card promo">
           <img src="img/logo.jpg" alt="Gomitas blandas Ojos">
           <h3>PROMOCIÓN SEMANAL</h3>
-          <p>Comprá 20 productos o más, y llevas DE REGALO 2 frascos de gomitas blandas(30u)</p>
-          <button class="btn-carrito">Hacer una consulta</button>
+          <button class="btn-carrito">Consultar</button>
         </div>
 
         <div class="card">
