elimine archivo catalogo

--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
 <!-- Headeer -->
 <header>
 
@@ -26,7 +25,7 @@
     </h1>
 
     <nav>
-      <a href="catalogo.html">👈 Volver al catálogo</a>
+      <a href="Golosinas_Aries.html">👈 Volver al catálogo</a>
     </nav>
 
   </div>
