--- a/Golosinas_Aries.html
+++ b/Golosinas_Aries.html
@@ -22,7 +22,7 @@
     </h1>
     <nav>
       <a href="contacto.html">Contacto</a>
-      <a href="catalogo.html">Catálogo 👇
+      <a href="Golosinas_Aries.html">Catálogo 👇
 </a>
       <input type="text" id="search" placeholder="🔍 Buscá un producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
       <p id="no-results" style="display:none; text-align:center; color:#fff; margin-top:0.5rem;"></p>
@@ -71,7 +71,7 @@
 
         <div class="card">
           <img src="img/ojos.jpg" alt="Gomitas blandas Ojos" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Ojos (30u)</h3>
+          <h3>Gomitas Ojos 👀(30u)</h3>
           <p>$7.500</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
