--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
     </h1>
 
     <nav>
-      <a href="Golosinas_Aries.html">👈 Volver al catálogo</a>
+      <a href="index.html">👈 Volver al catálogo</a>
     </nav>
 
   </div>
