--- a/Golosinas_Aries.html
+++ b/Golosinas_Aries.html
@@ -22,7 +22,7 @@
     </h1>
     <nav>
       <a href="contacto.html">Contacto</a>
-      <a href="index.html">Catálogo 👇
+      <a href="Golosinas_Aries.html">Catálogo 👇
 </a>
       <input type="text" id="search" placeholder="🔍 Buscá un producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
       <p id="no-results" style="display:none; text-align:center; color:#fff; margin-top:0.5rem;"></p>
