--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
         </div>
 
         <div class="card">
+          <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
+          <h3>Smack Bar (30u)</h3>
+          <p>$6.900</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
           <img src="img/sacalenguas1.jpg" alt="Sacalenguas" onclick="abrirModal(this)">
           <h3>Saca lenguas (30u)</h3>
           <p>$9.500</p>
@@ -201,8 +209,16 @@
         <div class="card">
           <img src="img/babydollmonsters.jpg" alt="chupetines baby dolls" onclick="abrirModal(this)">
           <h3>Chupetines masticables Baby Dolls TF (40u)</h3>
-          <p>$Sin Stock</p>
-         
+          <p>$5.500</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/babydoll_acido.jpg" alt="chupetines baby dolls" onclick="abrirModal(this)">
+          <h3>Chupetines masticables Baby Dolls ácidos (40u)</h3>
+          <p>$5.500</p>
+          <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
@@ -503,8 +519,8 @@
         <div class="card">
           <img src="img/lenguetazott.jpg" alt="lenguetazo" onclick="abrirModal(this)">
           <h3>Lenguetazo (50u)</h3>
-          <p>$Sin Stock</p>
-
+          <p>$7.500</p>
+          <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
@@ -673,8 +689,8 @@
         <div class="card">
           <img src="img/fieritacremosito.jpg" alt="fierita" onclick="abrirModal(this)">
           <h3>Chupetines Fierita cremosito (50u)</h3>
-          <p>$Sin Stock</p>
-          
+          <p>$7.800</p>
+          <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
@@ -804,6 +820,14 @@
         <div class="card">
           <img src="img/oblita_chocolate.jpg" alt="Cubanitos" onclick="abrirModal(this)">
             <h3> Oblita chocolate (48u)</h3>
+            <p>$5.800</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/oblita_blanco.jpg" alt="Cubanitos" onclick="abrirModal(this)">
+            <h3> Oblita chocolate Blanco(48u)</h3>
             <p>$5.800</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
