--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
  <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2>Llega por Correo Argentino en 2/5 días hábiles.</h2>
+    <h2>Catálogo</h2>
   </aside>
 
   <main>
